crates/check_cli/tests/snapshots/main_commands_format/format_package_json.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
snapshot_kind: text
---
## `package.json`

```json
{
  "name": "@foo/package",
  "dependencies": {
    "foo": "latest"
  }
}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
