crates/check_cli/tests/snapshots/main_commands_format/format_stdin_does_not_error_with_ignore_unknown_file_extensions.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
# Input messages

```block
function f() {return{}}
```

# Emitted Messages

```block
function f() {return{}}
```
