crates/check_cli/tests/snapshots/main_commands_format/format_stdin_with_errors.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
flags/invalid ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Missing argument stdin
  
  i Type the following command for more information
  
  $ check format --help
  


```


