crates/check_cli/tests/snapshots/main_commands_format/format_svelte_explicit_js_files_write.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.svelte`

```svelte
<script lang="js">
import { something } from "file.svelte";
statement();
</script>
<div></div>
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
