crates/check_cli/tests/snapshots/main_commands_format/format_svelte_implicit_js_files.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.svelte`

```svelte
<script>
import {    something } from "file.svelte";
statement ( ) ;
</script>
<div></div>
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.svelte format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1 1 │   <script>
    2   │ - import·{····something·}·from·"file.svelte";
    3   │ - statement·(·)·;
      2 │ + import·{·something·}·from·"file.svelte";
      3 │ + statement();
    4 4 │   </script>
    5 5 │   <div></div>
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
