crates/check_cli/tests/snapshots/main_commands_format/format_svelte_ts_files.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.svelte`

```svelte
<script setup lang="ts">
import     { type     something } from "file.svelte";
const hello  :      string      = "world";
</script>
<div></div>
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.svelte format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1 1 │   <script setup lang="ts">
    2   │ - import·····{·type·····something·}·from·"file.svelte";
    3   │ - const·hello··:······string······=·"world";
      2 │ + import·{·type·something·}·from·"file.svelte";
      3 │ + const·hello:·string·=·"world";
    4 4 │   </script>
    5 5 │   <div></div>
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
